[project]
name = "pytorch3d"
authors = [{ name = "FAIR" }]
dependencies = ["iopath", "fvcore"]
description = "PyTorch3D is FAIR's library of reusable components for deep Learning with 3D data."
requires-python = ">=3.8,<3.11"
dynamic = ["version"]

[project.optional-dependencies]
all = ["imageio", "ipywidgets", "matplotlib", "tqdm>4.29.0"]
dev = ["flake8", "usort"]
implicitron = [
    "accelerate",
    "hydra-core>=1.1",
    "lpips",
    "matplotlib",
    "tqdm>4.29.0",
    "visdom",
]

[build-system]
requires = ["setuptools", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pytorch3d.__version__" }

[project.scripts]
pytorch3d_implicitron_runner = "pytorch3d.implicitron_trainer.experiment:experiment"
pytorch3d_implicitron_visualizer = "pytorch3d.implicitron_trainer.visualize_reconstruction:main"

[tool.setuptools.package-data]
"*" = ["*.json"]